--- a/templates/index.html
+++ b/templates/index.html
@@ -115,6 +115,7 @@
         }
         
         #sub {
+            background-color: #fd7f07;
             width: 120px;
             height: 63px;
             text-align: center;
