--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             <input id="first" name="Year" type="number " placeholder="Eg: 2015" required="required">
             <h3>What is the Showroom Price?(In lakhs)</h3><br><input id="second" name="Present_Price" placeholder="Eg: 4" required="required">
             <h3>How Many Kilometers Drived?</h3><input id="third" name="Kms_Driven" placeholder="Eg: 20000" required="required">
-            <h3>How much owners previously had the car(0 or 1 or 3) ?</h3><br><input id="fourth" name="Owner" placeholder="1" required="required">
+            <h3>How much owners previously had the car(0 or 1 or 3) ?</h3><br><input id="fourth" name="Owner" placeholder="Eg: 1" required="required">
             <h3>What Is the Fuel type?</h3><br><select name="Fuel_Type_Petrol" id="fuel" required="required">
                 <option value="Petrol">Petrol</option>
                 <option value="Diesel">Diesel</option>
